[package]
edition = "2021"
name = "wasm-launcher"
version = "0.1.0"
workspace = "../.."

[dependencies]
bevy = "0.8"
stylist = {version = "0.10.1", features = ["yew_integration"]}
trains = {package = "trains", path = "../.."}
web-sys = {version = "0.3.59", features = ["Document", "Window"]}
yew = "0.19.3"
